# recomendar

./: CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.pre.yml  docker-compose.prod.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  celery_beat.py  celery_worker.py  celerybeat-schedule.db  main.py  pyproject.toml  startup.sh  test_celery.py
backend/alembic/: env.py
backend/alembic/versions/: 138dbddf3ea3_add_media_file_size_to_episodes_and_.py  210e7d798b58_transform_video_ids_to_prefixed_format.py  36ae9abb89c6_add_youtube_channel_description_to_.py  37bd0516b334_add_executed_by_to_notifications.py  79b4815371be_initial_database_schema_with_youtube_.py  7d0e08ad4b92_ensure_user_settings_defaults_and_fix_.py  7f7abf5fdf3f_add_timezone_to_user_settings.py  9fb1bc92c905_add_check_time_to_user_settings_and_.py  a1b2c3d4e5f6_add_source_type_and_original_filename_to_episodes.py  b2c3d4e5f6g7_make_video_id_nullable.py  d6d8d07b41e3_add_video_id_index_and_unique_constraint.py  f1a2b3c4d5e6_add_follow_channel_feature.py  g7h8i9j0k1l2_add_celery_task_status_table.py  h9i0j1k2l3m4_add_notifications_table.py  i1j2k3l4m5n6_add_audio_language_quality_to_episodes.py
backend/app/: main.py
backend/app/application/: __init__.py
backend/app/core/: __init__.py  auth.py  config.py  dependencies.py  jwt.py  logging.py  security.py  validation.py
backend/logs/: .gitkeep
backend/scripts/: fix_episodes.py  test_celery_tasks.py  test_follow_channel_feature.py  test_follow_channel_integration.py  test_phase5.py  validate_phase5.py
(+630 files in other folders)
