[project]
name = "labcastarr-backend"
version = "0.1.0"
description = "LabCastARR Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "podgen>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
    # Phase 2 specific dependencies
    "python-magic>=0.4.27",
    "mutagen>=1.47.0",
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
    # Phase 5 specific dependencies
    "websockets>=12.0",
    "slowapi>=0.1.9",
    "structlog>=24.1.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "yt-dlp>=2026.2.4",
    # Celery and Redis for background tasks
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
